src/parser/aquery.output
State 155 conflicts: 1 shift/reduce
State 207 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: top_level

    2 top_level: global_query top_level
    3          | create_table_or_view top_level
    4          | insert_statement top_level
    5          | update_statement top_level
    6          | delete_statement top_level
    7          | user_function_definition top_level
    8          | /* empty */

    9 global_query: local_queries base_query

   10 local_queries: WITH local_query local_queries_tail
   11              | /* empty */

   12 local_queries_tail: local_query local_queries_tail
   13                   | /* empty */

   14 local_query: ID col_aliases UC_AS '(' base_query ')'

   15 col_aliases: '(' comma_identifier_list ')'
   16            | /* empty */

   17 comma_identifier_list: ID comma_identifier_list_tail

   18 comma_identifier_list_tail: ',' ID comma_identifier_list_tail
   19                           | /* empty */

   20 base_query: select_clause from_clause order_clause where_clause groupby_clause

   21 select_clause: SELECT select_elem select_clause_tail

   22 select_elem: value_expression LC_AS ID
   23            | value_expression

   24 select_clause_tail: ',' select_elem select_clause_tail
   25                   | /* empty */

   26 from_clause: FROM table_expressions

   27 order_clause: ASSUMING ORDER comma_identifier_list
   28             | /* empty */

   29 where_clause: WHERE search_condition
   30             | /* empty */

   31 groupby_clause: GROUP BY comma_value_expression_list having_clause
   32               | /* empty */

   33 having_clause: HAVING search_condition
   34              | /* empty */

   35 search_condition: boolean_term
   36                 | search_condition OR boolean_term

   37 boolean_term: boolean_factor
   38             | boolean_term AND boolean_factor

   39 boolean_factor: boolean_test
   40               | NOT boolean_test

   41 boolean_test: boolean_primary
   42             | boolean_primary IS truth_value
   43             | boolean_primary IS NOT truth_value

   44 truth_value: TRUE
   45            | FALSE

   46 boolean_primary: predicate
   47                | '(' search_condition ')'

   48 predicate: built_in_pred_expression
   49          | value_expression

   50 built_in_pred_expression: between_predicate
   51                         | in_predicate
   52                         | null_predicate
   53                         | like_predicate
   54                         | overlaps_predicate

   55 between_predicate: value_expression BETWEEN value_expression AND value_expression
   56                  | value_expression NOT BETWEEN value_expression AND value_expression

   57 in_predicate: value_expression IN value_expression
   58             | value_expression NOT IN value_expression

   59 like_predicate: value_expression LIKE value_expression
   60               | value_expression NOT LIKE value_expression

   61 null_predicate: value_expression IS NOT NULL_KEYWORD
   62               | value_expression IS NULL_KEYWORD

   63 overlaps_predicate: range_value_expression OVERLAPS range_value_expression

   64 range_value_expression: '(' value_expression ',' value_expression ')'

   65 joined_table: qualified_join
   66             | qualified_join CROSS JOIN joined_table

   67 qualified_join: table_expression
   68               | table_expression NATURAL join_type JOIN qualified_join
   69               | table_expression join_type JOIN qualified_join join_spec

   70 table_expression: table_expression_main
   71                 | built_in_table_fun '(' table_expression_main ')'

   72 table_expression_main: ID ID
   73                      | ID LC_AS ID
   74                      | ID
   75                      | '(' joined_table ')'

   76 built_in_table_fun: FLATTEN

   77 table_expressions: joined_table table_expressions_tail

   78 table_expressions_tail: ',' joined_table table_expressions_tail
   79                       | /* empty */

   80 join_type: INNER
   81          | LEFT OUTER
   82          | LEFT
   83          | RIGHT
   84          | OUTER
   85          | FULL
   86          | FULL OUTER

   87 join_spec: on_clause
   88          | using_clause

   89 on_clause: ON search_condition

   90 using_clause: USING '(' comma_identifier_list ')'

   91 create_table_or_view: CREATE TABLE ID create_spec
   92                     | CREATE VIEW ID create_spec

   93 create_spec: UC_AS global_query
   94            | '(' schema ')'

   95 schema: schema_element schema_tail

   96 schema_element: ID type_name

   97 schema_tail: ',' schema_element schema_tail
   98            | /* empty */

   99 type_name: TYPE_INT
  100          | TYPE_FLOAT
  101          | TYPE_STRING
  102          | TYPE_DATE
  103          | TYPE_BOOLEAN
  104          | TYPE_BIT
  105          | TYPE_HEX

  106 update_statement: UPDATE ID SET set_clauses where_clause

  107 set_clauses: set_clause set_clauses_tail

  108 set_clauses_tail: ',' set_clause set_clauses_tail
  109                 | /* empty */

  110 set_clause: ID EQ_OP value_expression

  111 insert_statement: INSERT INTO ID insert_modifier insert_source

  112 insert_modifier: '(' comma_identifier_list ')'
  113                | /* empty */

  114 insert_source: global_query
  115              | VALUES '(' comma_value_expression_list ')'

  116 delete_statement: DELETE from_clause where_clause
  117                 | DELETE comma_identifier_list from_clause

  118 user_function_definition: FUNCTION ID '(' comma_identifier_list ')' '{' function_body '}'

  119 function_body: function_body_elem function_body_tail
  120              | /* empty */

  121 function_body_tail: ';' function_body_elem function_body_tail
  122                   | /* empty */

  123 function_body_elem: value_expression
  124                   | function_local_var_def
  125                   | local_queries base_query

  126 function_local_var_def: ID ASSIGN value_expression

  127 constant: INT
  128         | FLOAT
  129         | DATE
  130         | STRING
  131         | HEX
  132         | truth_value
  133         | BIT
  134         | NULL_VAL

  135 table_constant: ROWID
  136               | column_access
  137               | TIMES_OP

  138 column_access: ID '.' ID

  139 case_expression: CASE case_clause when_clauses else_clause END

  140 case_clause: value_expression
  141            | /* empty */

  142 when_clauses: when_clause when_clauses_tail

  143 when_clauses_tail: when_clause when_clauses_tail
  144                  | /* empty */

  145 when_clause: WHEN search_condition THEN value_expression

  146 else_clause: ELSE value_expression
  147            | /* empty */

  148 main_expression: constant
  149                | table_constant
  150                | ID
  151                | '(' value_expression ')'
  152                | case_expression

  153 call: main_expression
  154     | main_expression '[' indexing ']'
  155     | built_in_fun '(' comma_value_expression_list ')'
  156     | built_in_fun '(' ')'
  157     | ID '(' comma_value_expression_list ')'
  158     | ID '(' ')'

  159 indexing: ODD
  160         | EVEN
  161         | EVERY INT

  162 built_in_fun: ABS
  163             | AVG
  164             | AVGS
  165             | COUNT
  166             | DELTAS
  167             | DISTINCT
  168             | DROP
  169             | FIRST
  170             | LAST
  171             | MAX
  172             | MAXS
  173             | MIN
  174             | MINS
  175             | MOD
  176             | NEXT
  177             | PREV
  178             | PRD
  179             | PRDS
  180             | REV
  181             | SUM
  182             | SUMS
  183             | STDDEV

  184 mult_expression: call
  185                | mult_expression TIMES_OP call
  186                | mult_expression DIV_OP call

  187 add_expression: mult_expression
  188               | add_expression PLUS_OP mult_expression
  189               | add_expression MINUS_OP mult_expression

  190 rel_expression: add_expression
  191               | rel_expression L_OP add_expression
  192               | rel_expression G_OP add_expression
  193               | rel_expression LE_OP add_expression
  194               | rel_expression GE_OP add_expression

  195 eq_expression: rel_expression
  196              | eq_expression EQ_OP rel_expression
  197              | eq_expression NEQ_OP rel_expression

  198 and_expression: eq_expression
  199               | and_expression AND_OP eq_expression

  200 or_expression: and_expression
  201              | or_expression OR_OP and_expression

  202 value_expression: or_expression

  203 comma_value_expression_list: value_expression comma_value_expression_list_tail

  204 comma_value_expression_list_tail: ',' value_expression comma_value_expression_list_tail
  205                                 | /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 15 47 64 71 75 90 94 112 115 118 151 155 156 157 158
')' (41) 14 15 47 64 71 75 90 94 112 115 118 151 155 156 157 158
',' (44) 18 24 64 78 97 108 204
'.' (46) 138
';' (59) 121
'[' (91) 154
']' (93) 154
'{' (123) 118
'}' (125) 118
error (256)
WITH (258) 10
UC_AS (259) 14 93
SELECT (260) 21
FROM (261) 26
ASSUMING (262) 27
ORDER (263) 27
WHERE (264) 29
GROUP (265) 31
BY (266) 31
HAVING (267) 33
LC_AS (268) 22 73
ROWID (269) 135
ODD (270) 159
EVEN (271) 160
EVERY (272) 161
FLATTEN (273) 76
CROSS (274) 66
JOIN (275) 66 68 69
NATURAL (276) 68
INNER (277) 80
OUTER (278) 81 84 86
LEFT (279) 81 82
RIGHT (280) 83
FULL (281) 85 86
ON (282) 89
USING (283) 90
CREATE (284) 91 92
TABLE (285) 91
VIEW (286) 92
UPDATE (287) 106
SET (288) 106
INSERT (289) 111
INTO (290) 111
VALUES (291) 115
DELETE (292) 116 117
AND (293) 38 55 56
OR (294) 36
IS (295) 42 43 61 62
NOT (296) 40 43 56 58 60 61
BETWEEN (297) 55 56
IN (298) 57 58
LIKE (299) 59 60
NULL_KEYWORD (300) 61 62
OVERLAPS (301) 63
CASE (302) 139
END (303) 139
WHEN (304) 145
THEN (305) 145
ELSE (306) 146
TYPE_INT (307) 99
TYPE_FLOAT (308) 100
TYPE_STRING (309) 101
TYPE_DATE (310) 102
TYPE_BOOLEAN (311) 103
TYPE_BIT (312) 104
TYPE_HEX (313) 105
FUNCTION (314) 118
ASSIGN (315) 126
ABS (316) 162
AVG (317) 163
COUNT (318) 165
DISTINCT (319) 167
DROP (320) 168
FIRST (321) 169
LAST (322) 170
MAX (323) 171
MIN (324) 173
MOD (325) 175
NEXT (326) 176
PREV (327) 177
PRD (328) 178
REV (329) 180
SUM (330) 181
STDDEV (331) 183
AVGS (332) 164
DELTAS (333) 166
MAXS (334) 172
MINS (335) 174
PRDS (336) 179
SUMS (337) 182
INT (338) 127 161
FLOAT (339) 128
STRING (340) 130
DATE (341) 129
TRUE (342) 44
FALSE (343) 45
BIT (344) 133
HEX (345) 131
NULL_VAL (346) 134
ID (347) 14 17 18 22 72 73 74 91 92 96 106 110 111 118 126 138 150
    157 158
TIMES_OP (348) 137 185
DIV_OP (349) 186
PLUS_OP (350) 188
MINUS_OP (351) 189
LE_OP (352) 193
GE_OP (353) 194
L_OP (354) 191
G_OP (355) 192
EQ_OP (356) 110 196
NEQ_OP (357) 197
AND_OP (358) 199
OR_OP (359) 201


Nonterminals, with rules where they appear

$accept (114)
    on left: 0
program (115)
    on left: 1, on right: 0
top_level (116)
    on left: 2 3 4 5 6 7 8, on right: 1 2 3 4 5 6 7
global_query (117)
    on left: 9, on right: 2 93 114
local_queries (118)
    on left: 10 11, on right: 9 125
local_queries_tail (119)
    on left: 12 13, on right: 10 12
local_query (120)
    on left: 14, on right: 10 12
col_aliases (121)
    on left: 15 16, on right: 14
comma_identifier_list (122)
    on left: 17, on right: 15 27 90 112 117 118
comma_identifier_list_tail (123)
    on left: 18 19, on right: 17 18
base_query (124)
    on left: 20, on right: 9 14 125
select_clause (125)
    on left: 21, on right: 20
select_elem (126)
    on left: 22 23, on right: 21 24
select_clause_tail (127)
    on left: 24 25, on right: 21 24
from_clause (128)
    on left: 26, on right: 20 116 117
order_clause (129)
    on left: 27 28, on right: 20
where_clause (130)
    on left: 29 30, on right: 20 106 116
groupby_clause (131)
    on left: 31 32, on right: 20
having_clause (132)
    on left: 33 34, on right: 31
search_condition (133)
    on left: 35 36, on right: 29 33 36 47 89 145
boolean_term (134)
    on left: 37 38, on right: 35 36 38
boolean_factor (135)
    on left: 39 40, on right: 37 38
boolean_test (136)
    on left: 41 42 43, on right: 39 40
truth_value (137)
    on left: 44 45, on right: 42 43 132
boolean_primary (138)
    on left: 46 47, on right: 41 42 43
predicate (139)
    on left: 48 49, on right: 46
built_in_pred_expression (140)
    on left: 50 51 52 53 54, on right: 48
between_predicate (141)
    on left: 55 56, on right: 50
in_predicate (142)
    on left: 57 58, on right: 51
like_predicate (143)
    on left: 59 60, on right: 53
null_predicate (144)
    on left: 61 62, on right: 52
overlaps_predicate (145)
    on left: 63, on right: 54
range_value_expression (146)
    on left: 64, on right: 63
joined_table (147)
    on left: 65 66, on right: 66 75 77 78
qualified_join (148)
    on left: 67 68 69, on right: 65 66 68 69
table_expression (149)
    on left: 70 71, on right: 67 68 69
table_expression_main (150)
    on left: 72 73 74 75, on right: 70 71
built_in_table_fun (151)
    on left: 76, on right: 71
table_expressions (152)
    on left: 77, on right: 26
table_expressions_tail (153)
    on left: 78 79, on right: 77 78
join_type (154)
    on left: 80 81 82 83 84 85 86, on right: 68 69
join_spec (155)
    on left: 87 88, on right: 69
on_clause (156)
    on left: 89, on right: 87
using_clause (157)
    on left: 90, on right: 88
create_table_or_view (158)
    on left: 91 92, on right: 3
create_spec (159)
    on left: 93 94, on right: 91 92
schema (160)
    on left: 95, on right: 94
schema_element (161)
    on left: 96, on right: 95 97
schema_tail (162)
    on left: 97 98, on right: 95 97
type_name (163)
    on left: 99 100 101 102 103 104 105, on right: 96
update_statement (164)
    on left: 106, on right: 5
set_clauses (165)
    on left: 107, on right: 106
set_clauses_tail (166)
    on left: 108 109, on right: 107 108
set_clause (167)
    on left: 110, on right: 107 108
insert_statement (168)
    on left: 111, on right: 4
insert_modifier (169)
    on left: 112 113, on right: 111
insert_source (170)
    on left: 114 115, on right: 111
delete_statement (171)
    on left: 116 117, on right: 6
user_function_definition (172)
    on left: 118, on right: 7
function_body (173)
    on left: 119 120, on right: 118
function_body_tail (174)
    on left: 121 122, on right: 119 121
function_body_elem (175)
    on left: 123 124 125, on right: 119 121
function_local_var_def (176)
    on left: 126, on right: 124
constant (177)
    on left: 127 128 129 130 131 132 133 134, on right: 148
table_constant (178)
    on left: 135 136 137, on right: 149
column_access (179)
    on left: 138, on right: 136
case_expression (180)
    on left: 139, on right: 152
case_clause (181)
    on left: 140 141, on right: 139
when_clauses (182)
    on left: 142, on right: 139
when_clauses_tail (183)
    on left: 143 144, on right: 142 143
when_clause (184)
    on left: 145, on right: 142 143
else_clause (185)
    on left: 146 147, on right: 139
main_expression (186)
    on left: 148 149 150 151 152, on right: 153 154
call (187)
    on left: 153 154 155 156 157 158, on right: 184 185 186
indexing (188)
    on left: 159 160 161, on right: 154
built_in_fun (189)
    on left: 162 163 164 165 166 167 168 169 170 171 172 173 174 175
    176 177 178 179 180 181 182 183, on right: 155 156
mult_expression (190)
    on left: 184 185 186, on right: 185 186 187 188 189
add_expression (191)
    on left: 187 188 189, on right: 188 189 190 191 192 193 194
rel_expression (192)
    on left: 190 191 192 193 194, on right: 191 192 193 194 195 196
    197
eq_expression (193)
    on left: 195 196 197, on right: 196 197 198 199
and_expression (194)
    on left: 198 199, on right: 199 200 201
or_expression (195)
    on left: 200 201, on right: 201 202
value_expression (196)
    on left: 202, on right: 22 23 49 55 56 57 58 59 60 61 62 64 110
    123 126 140 145 146 151 203 204
comma_value_expression_list (197)
    on left: 203, on right: 31 115 155 157
comma_value_expression_list_tail (198)
    on left: 204 205, on right: 203 204


state 0

    0 $accept: . program $end

    WITH      shift, and go to state 1
    CREATE    shift, and go to state 2
    UPDATE    shift, and go to state 3
    INSERT    shift, and go to state 4
    DELETE    shift, and go to state 5
    FUNCTION  shift, and go to state 6

    SELECT    reduce using rule 11 (local_queries)
    $default  reduce using rule 8 (top_level)

    program                   go to state 7
    top_level                 go to state 8
    global_query              go to state 9
    local_queries             go to state 10
    create_table_or_view      go to state 11
    update_statement          go to state 12
    insert_statement          go to state 13
    delete_statement          go to state 14
    user_function_definition  go to state 15


state 1

   10 local_queries: WITH . local_query local_queries_tail

    ID  shift, and go to state 16

    local_query  go to state 17


state 2

   91 create_table_or_view: CREATE . TABLE ID create_spec
   92                     | CREATE . VIEW ID create_spec

    TABLE  shift, and go to state 18
    VIEW   shift, and go to state 19


state 3

  106 update_statement: UPDATE . ID SET set_clauses where_clause

    ID  shift, and go to state 20


state 4

  111 insert_statement: INSERT . INTO ID insert_modifier insert_source

    INTO  shift, and go to state 21


state 5

  116 delete_statement: DELETE . from_clause where_clause
  117                 | DELETE . comma_identifier_list from_clause

    FROM  shift, and go to state 22
    ID    shift, and go to state 23

    comma_identifier_list  go to state 24
    from_clause            go to state 25


state 6

  118 user_function_definition: FUNCTION . ID '(' comma_identifier_list ')' '{' function_body '}'

    ID  shift, and go to state 26


state 7

    0 $accept: program . $end

    $end  shift, and go to state 27


state 8

    1 program: top_level .

    $default  reduce using rule 1 (program)


state 9

    2 top_level: global_query . top_level

    WITH      shift, and go to state 1
    CREATE    shift, and go to state 2
    UPDATE    shift, and go to state 3
    INSERT    shift, and go to state 4
    DELETE    shift, and go to state 5
    FUNCTION  shift, and go to state 6

    SELECT    reduce using rule 11 (local_queries)
    $default  reduce using rule 8 (top_level)

    top_level                 go to state 28
    global_query              go to state 9
    local_queries             go to state 10
    create_table_or_view      go to state 11
    update_statement          go to state 12
    insert_statement          go to state 13
    delete_statement          go to state 14
    user_function_definition  go to state 15


state 10

    9 global_query: local_queries . base_query

    SELECT  shift, and go to state 29

    base_query     go to state 30
    select_clause  go to state 31


state 11

    3 top_level: create_table_or_view . top_level

    WITH      shift, and go to state 1
    CREATE    shift, and go to state 2
    UPDATE    shift, and go to state 3
    INSERT    shift, and go to state 4
    DELETE    shift, and go to state 5
    FUNCTION  shift, and go to state 6

    SELECT    reduce using rule 11 (local_queries)
    $default  reduce using rule 8 (top_level)

    top_level                 go to state 32
    global_query              go to state 9
    local_queries             go to state 10
    create_table_or_view      go to state 11
    update_statement          go to state 12
    insert_statement          go to state 13
    delete_statement          go to state 14
    user_function_definition  go to state 15


state 12

    5 top_level: update_statement . top_level

    WITH      shift, and go to state 1
    CREATE    shift, and go to state 2
    UPDATE    shift, and go to state 3
    INSERT    shift, and go to state 4
    DELETE    shift, and go to state 5
    FUNCTION  shift, and go to state 6

    SELECT    reduce using rule 11 (local_queries)
    $default  reduce using rule 8 (top_level)

    top_level                 go to state 33
    global_query              go to state 9
    local_queries             go to state 10
    create_table_or_view      go to state 11
    update_statement          go to state 12
    insert_statement          go to state 13
    delete_statement          go to state 14
    user_function_definition  go to state 15


state 13

    4 top_level: insert_statement . top_level

    WITH      shift, and go to state 1
    CREATE    shift, and go to state 2
    UPDATE    shift, and go to state 3
    INSERT    shift, and go to state 4
    DELETE    shift, and go to state 5
    FUNCTION  shift, and go to state 6

    SELECT    reduce using rule 11 (local_queries)
    $default  reduce using rule 8 (top_level)

    top_level                 go to state 34
    global_query              go to state 9
    local_queries             go to state 10
    create_table_or_view      go to state 11
    update_statement          go to state 12
    insert_statement          go to state 13
    delete_statement          go to state 14
    user_function_definition  go to state 15


state 14

    6 top_level: delete_statement . top_level

    WITH      shift, and go to state 1
    CREATE    shift, and go to state 2
    UPDATE    shift, and go to state 3
    INSERT    shift, and go to state 4
    DELETE    shift, and go to state 5
    FUNCTION  shift, and go to state 6

    SELECT    reduce using rule 11 (local_queries)
    $default  reduce using rule 8 (top_level)

    top_level                 go to state 35
    global_query              go to state 9
    local_queries             go to state 10
    create_table_or_view      go to state 11
    update_statement          go to state 12
    insert_statement          go to state 13
    delete_statement          go to state 14
    user_function_definition  go to state 15


state 15

    7 top_level: user_function_definition . top_level

    WITH      shift, and go to state 1
    CREATE    shift, and go to state 2
    UPDATE    shift, and go to state 3
    INSERT    shift, and go to state 4
    DELETE    shift, and go to state 5
    FUNCTION  shift, and go to state 6

    SELECT    reduce using rule 11 (local_queries)
    $default  reduce using rule 8 (top_level)

    top_level                 go to state 36
    global_query              go to state 9
    local_queries             go to state 10
    create_table_or_view      go to state 11
    update_statement          go to state 12
    insert_statement          go to state 13
    delete_statement          go to state 14
    user_function_definition  go to state 15


state 16

   14 local_query: ID . col_aliases UC_AS '(' base_query ')'

    '('  shift, and go to state 37

    $default  reduce using rule 16 (col_aliases)

    col_aliases  go to state 38


state 17

   10 local_queries: WITH local_query . local_queries_tail

    ID  shift, and go to state 16

    $default  reduce using rule 13 (local_queries_tail)

    local_queries_tail  go to state 39
    local_query         go to state 40


state 18

   91 create_table_or_view: CREATE TABLE . ID create_spec

    ID  shift, and go to state 41


state 19

   92 create_table_or_view: CREATE VIEW . ID create_spec

    ID  shift, and go to state 42


state 20

  106 update_statement: UPDATE ID . SET set_clauses where_clause

    SET  shift, and go to state 43


state 21

  111 insert_statement: INSERT INTO . ID insert_modifier insert_source

    ID  shift, and go to state 44


state 22

   26 from_clause: FROM . table_expressions

    FLATTEN  shift, and go to state 45
    ID       shift, and go to state 46
    '('      shift, and go to state 47

    joined_table           go to state 48
    qualified_join         go to state 49
    table_expression       go to state 50
    table_expression_main  go to state 51
    built_in_table_fun     go to state 52
    table_expressions      go to state 53


state 23

   17 comma_identifier_list: ID . comma_identifier_list_tail

    ','  shift, and go to state 54

    $default  reduce using rule 19 (comma_identifier_list_tail)

    comma_identifier_list_tail  go to state 55


state 24

  117 delete_statement: DELETE comma_identifier_list . from_clause

    FROM  shift, and go to state 22

    from_clause  go to state 56


state 25

  116 delete_statement: DELETE from_clause . where_clause

    WHERE  shift, and go to state 57

    $default  reduce using rule 30 (where_clause)

    where_clause  go to state 58


state 26

  118 user_function_definition: FUNCTION ID . '(' comma_identifier_list ')' '{' function_body '}'

    '('  shift, and go to state 59


state 27

    0 $accept: program $end .

    $default  accept


state 28

    2 top_level: global_query top_level .

    $default  reduce using rule 2 (top_level)


state 29

   21 select_clause: SELECT . select_elem select_clause_tail

    ROWID     shift, and go to state 60
    CASE      shift, and go to state 61
    ABS       shift, and go to state 62
    AVG       shift, and go to state 63
    COUNT     shift, and go to state 64
    DISTINCT  shift, and go to state 65
    DROP      shift, and go to state 66
    FIRST     shift, and go to state 67
    LAST      shift, and go to state 68
    MAX       shift, and go to state 69
    MIN       shift, and go to state 70
    MOD       shift, and go to state 71
    NEXT      shift, and go to state 72
    PREV      shift, and go to state 73
    PRD       shift, and go to state 74
    REV       shift, and go to state 75
    SUM       shift, and go to state 76
    STDDEV    shift, and go to state 77
    AVGS      shift, and go to state 78
    DELTAS    shift, and go to state 79
    MAXS      shift, and go to state 80
    MINS      shift, and go to state 81
    PRDS      shift, and go to state 82
    SUMS      shift, and go to state 83
    INT       shift, and go to state 84
    FLOAT     shift, and go to state 85
    STRING    shift, and go to state 86
    DATE      shift, and go to state 87
    TRUE      shift, and go to state 88
    FALSE     shift, and go to state 89
    BIT       shift, and go to state 90
    HEX       shift, and go to state 91
    NULL_VAL  shift, and go to state 92
    ID        shift, and go to state 93
    TIMES_OP  shift, and go to state 94
    '('       shift, and go to state 95

    select_elem       go to state 96
    truth_value       go to state 97
    constant          go to state 98
    table_constant    go to state 99
    column_access     go to state 100
    case_expression   go to state 101
    main_expression   go to state 102
    call              go to state 103
    built_in_fun      go to state 104
    mult_expression   go to state 105
    add_expression    go to state 106
    rel_expression    go to state 107
    eq_expression     go to state 108
    and_expression    go to state 109
    or_expression     go to state 110
    value_expression  go to state 111


state 30

    9 global_query: local_queries base_query .

    $default  reduce using rule 9 (global_query)


state 31

   20 base_query: select_clause . from_clause order_clause where_clause groupby_clause

    FROM  shift, and go to state 22

    from_clause  go to state 112


state 32

    3 top_level: create_table_or_view top_level .

    $default  reduce using rule 3 (top_level)


state 33

    5 top_level: update_statement top_level .

    $default  reduce using rule 5 (top_level)


state 34

    4 top_level: insert_statement top_level .

    $default  reduce using rule 4 (top_level)


state 35

    6 top_level: delete_statement top_level .

    $default  reduce using rule 6 (top_level)


state 36

    7 top_level: user_function_definition top_level .

    $default  reduce using rule 7 (top_level)


state 37

   15 col_aliases: '(' . comma_identifier_list ')'

    ID  shift, and go to state 23

    comma_identifier_list  go to state 113


state 38

   14 local_query: ID col_aliases . UC_AS '(' base_query ')'

    UC_AS  shift, and go to state 114


state 39

   10 local_queries: WITH local_query local_queries_tail .

    $default  reduce using rule 10 (local_queries)


state 40

   12 local_queries_tail: local_query . local_queries_tail

    ID  shift, and go to state 16

    $default  reduce using rule 13 (local_queries_tail)

    local_queries_tail  go to state 115
    local_query         go to state 40


state 41

   91 create_table_or_view: CREATE TABLE ID . create_spec

    UC_AS  shift, and go to state 116
    '('    shift, and go to state 117

    create_spec  go to state 118


state 42

   92 create_table_or_view: CREATE VIEW ID . create_spec

    UC_AS  shift, and go to state 116
    '('    shift, and go to state 117

    create_spec  go to state 119


state 43

  106 update_statement: UPDATE ID SET . set_clauses where_clause

    ID  shift, and go to state 120

    set_clauses  go to state 121
    set_clause   go to state 122


state 44

  111 insert_statement: INSERT INTO ID . insert_modifier insert_source

    '('  shift, and go to state 123

    $default  reduce using rule 113 (insert_modifier)

    insert_modifier  go to state 124


state 45

   76 built_in_table_fun: FLATTEN .

    $default  reduce using rule 76 (built_in_table_fun)


state 46

   72 table_expression_main: ID . ID
   73                      | ID . LC_AS ID
   74                      | ID .

    LC_AS  shift, and go to state 125
    ID     shift, and go to state 126

    $default  reduce using rule 74 (table_expression_main)


state 47

   75 table_expression_main: '(' . joined_table ')'

    FLATTEN  shift, and go to state 45
    ID       shift, and go to state 46
    '('      shift, and go to state 47

    joined_table           go to state 127
    qualified_join         go to state 49
    table_expression       go to state 50
    table_expression_main  go to state 51
    built_in_table_fun     go to state 52


state 48

   77 table_expressions: joined_table . table_expressions_tail

    ','  shift, and go to state 128

    $default  reduce using rule 79 (table_expressions_tail)

    table_expressions_tail  go to state 129


state 49

   65 joined_table: qualified_join .
   66             | qualified_join . CROSS JOIN joined_table

    CROSS  shift, and go to state 130

    $default  reduce using rule 65 (joined_table)


state 50

   67 qualified_join: table_expression .
   68               | table_expression . NATURAL join_type JOIN qualified_join
   69               | table_expression . join_type JOIN qualified_join join_spec

    NATURAL  shift, and go to state 131
    INNER    shift, and go to state 132
    OUTER    shift, and go to state 133
    LEFT     shift, and go to state 134
    RIGHT    shift, and go to state 135
    FULL     shift, and go to state 136

    $default  reduce using rule 67 (qualified_join)

    join_type  go to state 137


state 51

   70 table_expression: table_expression_main .

    $default  reduce using rule 70 (table_expression)


state 52

   71 table_expression: built_in_table_fun . '(' table_expression_main ')'

    '('  shift, and go to state 138


state 53

   26 from_clause: FROM table_expressions .

    $default  reduce using rule 26 (from_clause)


state 54

   18 comma_identifier_list_tail: ',' . ID comma_identifier_list_tail

    ID  shift, and go to state 139


state 55

   17 comma_identifier_list: ID comma_identifier_list_tail .

    $default  reduce using rule 17 (comma_identifier_list)


state 56

  117 delete_statement: DELETE comma_identifier_list from_clause .

    $default  reduce using rule 117 (delete_statement)


state 57

   29 where_clause: WHERE . search_condition

    ROWID     shift, and go to state 60
    NOT       shift, and go to state 140
    CASE      shift, and go to state 61
    ABS       shift, and go to state 62
    AVG       shift, and go to state 63
    COUNT     shift, and go to state 64
    DISTINCT  shift, and go to state 65
    DROP      shift, and go to state 66
    FIRST     shift, and go to state 67
    LAST      shift, and go to state 68
    MAX       shift, and go to state 69
    MIN       shift, and go to state 70
    MOD       shift, and go to state 71
    NEXT      shift, and go to state 72
    PREV      shift, and go to state 73
    PRD       shift, and go to state 74
    REV       shift, and go to state 75
    SUM       shift, and go to state 76
    STDDEV    shift, and go to state 77
    AVGS      shift, and go to state 78
    DELTAS    shift, and go to state 79
    MAXS      shift, and go to state 80
    MINS      shift, and go to state 81
    PRDS      shift, and go to state 82
    SUMS      shift, and go to state 83
    INT       shift, and go to state 84
    FLOAT     shift, and go to state 85
    STRING    shift, and go to state 86
    DATE      shift, and go to state 87
    TRUE      shift, and go to state 88
    FALSE     shift, and go to state 89
    BIT       shift, and go to state 90
    HEX       shift, and go to state 91
    NULL_VAL  shift, and go to state 92
    ID        shift, and go to state 93
    TIMES_OP  shift, and go to state 94
    '('       shift, and go to state 141

    search_condition          go to state 142
    boolean_term              go to state 143
    boolean_factor            go to state 144
    boolean_test              go to state 145
    truth_value               go to state 97
    boolean_primary           go to state 146
    predicate                 go to state 147
    built_in_pred_expression  go to state 148
    between_predicate         go to state 149
    in_predicate              go to state 150
    like_predicate            go to state 151
    null_predicate            go to state 152
    overlaps_predicate        go to state 153
    range_value_expression    go to state 154
    constant                  go to state 98
    table_constant            go to state 99
    column_access             go to state 100
    case_expression           go to state 101
    main_expression           go to state 102
    call                      go to state 103
    built_in_fun              go to state 104
    mult_expression           go to state 105
    add_expression            go to state 106
    rel_expression            go to state 107
    eq_expression             go to state 108
    and_expression            go to state 109
    or_expression             go to state 110
    value_expression          go to state 155


state 58

  116 delete_statement: DELETE from_clause where_clause .

    $default  reduce using rule 116 (delete_statement)


state 59

  118 user_function_definition: FUNCTION ID '(' . comma_identifier_list ')' '{' function_body '}'

    ID  shift, and go to state 23

    comma_identifier_list  go to state 156


state 60

  135 table_constant: ROWID .

    $default  reduce using rule 135 (table_constant)


state 61

  139 case_expression: CASE . case_clause when_clauses else_clause END

    ROWID     shift, and go to state 60
    CASE      shift, and go to state 61
    ABS       shift, and go to state 62
    AVG       shift, and go to state 63
    COUNT     shift, and go to state 64
    DISTINCT  shift, and go to state 65
    DROP      shift, and go to state 66
    FIRST     shift, and go to state 67
    LAST      shift, and go to state 68
    MAX       shift, and go to state 69
    MIN       shift, and go to state 70
    MOD       shift, and go to state 71
    NEXT      shift, and go to state 72
    PREV      shift, and go to state 73
    PRD       shift, and go to state 74
    REV       shift, and go to state 75
    SUM       shift, and go to state 76
    STDDEV    shift, and go to state 77
    AVGS      shift, and go to state 78
    DELTAS    shift, and go to state 79
    MAXS      shift, and go to state 80
    MINS      shift, and go to state 81
    PRDS      shift, and go to state 82
    SUMS      shift, and go to state 83
    INT       shift, and go to state 84
    FLOAT     shift, and go to state 85
    STRING    shift, and go to state 86
    DATE      shift, and go to state 87
    TRUE      shift, and go to state 88
    FALSE     shift, and go to state 89
    BIT       shift, and go to state 90
    HEX       shift, and go to state 91
    NULL_VAL  shift, and go to state 92
    ID        shift, and go to state 93
    TIMES_OP  shift, and go to state 94
    '('       shift, and go to state 95

    $default  reduce using rule 141 (case_clause)
